tools/grafana-dev-deploy.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2022-01-10T12:15:35Z"
    generation: 1
    labels:
      app: multicluster-observability-grafana-dev
      observability.open-cluster-management.io/name: observability
    name: grafana-dev
    namespace: open-cluster-management-observability
    ownerReferences:
    - apiVersion: observability.open-cluster-management.io/v1beta2
      blockOwnerDeletion: true
      controller: true
      kind: MultiClusterObservability
      name: observability
      uid: 7b243681-0e43-4807-b38e-122e5f4bd133
    resourceVersion: "184386"
    uid: 07489927-b4c0-4f44-a8d6-a3d74deb418e
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: multicluster-observability-grafana-dev
        observability.open-cluster-management.io/name: observability
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: multicluster-observability-grafana-dev
          observability.open-cluster-management.io/name: observability
      spec:
        affinity:
          podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - multicluster-observability-grafana-dev
                topologyKey: topology.kubernetes.io/zone
              weight: 70
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - multicluster-observability-grafana-dev
                topologyKey: kubernetes.io/hostname
              weight: 30
        containers:
        - args:
          - -config=/etc/grafana/grafana.ini
          image: quay.io/open-cluster-management/grafana@sha256:e321d0d07877690dab33d5bbd407608ea11f3a7842ad950de48492ed9cd96dcb
          imagePullPolicy: Always
          name: grafana-dev
          ports:
          - containerPort: 3001
            name: http
            protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 4m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/grafana
            name: grafana-storage
          - mountPath: /etc/grafana/provisioning/datasources
            name: grafana-datasources
          - mountPath: /etc/grafana
            name: grafana-dev-config
        - env:
          - name: POD_NAMESPACE
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
          image: quay.io/open-cluster-management/grafana-dashboard-loader@sha256:070734fe04b27c5e5d3e3942f9148a6ab004806d4ae4790e5f9d7e9f4fa16490
          imagePullPolicy: Always
          name: grafana-dashboard-loader
          resources:
            requests:
              cpu: 4m
              memory: 50Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: multiclusterhub-operator-pull-secret
        nodeSelector:
          kubernetes.io/os: linux
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {fsGroup: 1000710000}
        serviceAccount: grafana
        serviceAccountName: grafana
        terminationGracePeriodSeconds: 30
        volumes:
        - persistentVolumeClaim:
            claimName: grafana-dev
          name: grafana-storage
        - name: grafana-datasources
          secret:
            defaultMode: 420
            secretName: grafana-datasources
        - name: grafana-dev-config
          secret:
            defaultMode: 420
            secretName: grafana-dev-config
  status:
    availableReplicas: 3
    conditions:
    - lastTransitionTime: "2022-01-10T12:15:56Z"
      lastUpdateTime: "2022-01-10T12:15:56Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2022-01-10T12:15:35Z"
      lastUpdateTime: "2022-01-10T12:15:56Z"
      message: ReplicaSet "observability-grafana-7f9bb8d66f" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 3
    replicas: 1
    updatedReplicas: 3
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
